# poco-agent

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  README_EN.md  README_zh.md  pyproject.toml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 331320b4f8d1_.py  6dd7517c0d5f_.py  b59418d33935_.py
backend/app/core/: deps.py  settings.py
backend/app/models/: __init__.py  agent_message.py  env_var.py  plugin.py  skill.py  sub_agent.py  tool_execution.py  usage_log.py  user_mcp_install.py  user_plugin_install.py  user_skill_install.py
backend/app/repositories/: env_var_repository.py  mcp_server_repository.py  plugin_repository.py  skill_repository.py  sub_agent_repository.py  tool_execution_repository.py  usage_log_repository.py  user_mcp_install_repository.py  user_plugin_install_repository.py  user_skill_install_repository.py
backend/app/schemas/: env_var.py  mcp_config.py  plugin.py  run.py  session.py  skill.py  source.py  sub_agent.py  usage.py
backend/app/services/: callback_service.py  env_var_service.py  mcp_config_service.py  mcp_server_service.py  plugin_import_service.py  plugin_service.py  session_service.py  skill_import_service.py  skill_service.py  slash_command_config_service.py  source_utils.py  sub_agent_service.py  task_service.py  usage_service.py  user_mcp_install_service.py  user_plugin_install_service.py  user_skill_install_service.py
backend/app/utils/: markdown_front_matter.py
executor_manager/: pyproject.toml
executor_manager/app/: __init__.py  main.py
executor_manager/app/api/: __init__.py
executor_manager/app/core/: settings.py
executor_manager/app/scheduler/: scheduler_config.py  task_dispatcher.py
executor_manager/app/schemas/: callback.py  workspace.py
executor_manager/app/services/: backend_client.py  callback_service.py  claude_md_stager.py  (+7 more)
(+176 files in other folders)
